--- a/dropdown-menu.html
+++ b/dropdown-menu.html
@@ -14,8 +14,24 @@
       <div class="left-navbar">
         <div class="icon">
         </div>
-        <div><a href="#">Personal</a></div>
+           <div>
+             <a href="#">Present</a>
+            <div class="drop-container-i">
+                <div class="drop-element-i">
+                  <a href="#">Sub Menù1</a>
+                  <a href="#">Sub Menù1</a>
+                  <a href="#">Sub Menù1</a>
+                </div>
+            </div>
+          </div>
         <div><a href="#">Business</a></div>
+        <div class="drop-container-i">
+            <div class="drop-element-i">
+              <a href="#">Sub Menù1</a>
+              <a href="#">Sub Menù1</a>
+              <a href="#">Sub Menù1</a>
+            </div>
+        </div>
       </div>
 
     </div>
