--- a/dropdown-menu.html
+++ b/dropdown-menu.html
@@ -11,41 +11,22 @@
   <body>
   <header>
     <div class="header-left">
-      <div class="left-navbar">
         <div class="icon">
         </div>
-           <div>
-             <a href="#">Present</a>
-            <div class="drop-container-i">
-                <div class="drop-element-i">
-                  <a href="#">Sub Menù1</a>
-                  <a href="#">Sub Menù1</a>
-                  <a href="#">Sub Menù1</a>
-                </div>
-            </div>
-          </div>
-        <div><a href="#">Business</a></div>
-        <div class="drop-container-i">
-            <div class="drop-element-i">
-              <a href="#">Sub Menù1</a>
-              <a href="#">Sub Menù1</a>
-              <a href="#">Sub Menù1</a>
-            </div>
-        </div>
-      </div>
-
+        <div class=""><a href="#">Present</a></div>
+        <div><a href="#">Business</a>
+    </div>
     </div>
     <div class="header-right">
-       <div class="right-navbar">
-          <div><a href="#">Pricing</a></div>
-          <div><a href="#">Accounts</a></div>
-          <div><a href="#">Products</a></div>
-          <div><a href="#">Company</a></div>
-          <div><a href="#">Help</a></div>
-          <div><a href="#">En</a></div>
-          <div class="pink"><a href="#">Get The App</a></div>
-      </div>
+       <div><a href="#">Pricing</a></div>
+       <div><a href="#">Accounts</a></div>
+       <div><a href="#">Products</a></div>
+       <div><a href="#">Company</a></div>
+       <div><a href="#">Help</a></div>
+       <div><a href="#">En</a></div>
+       <div class="pink"><a href="#">Get The App</a></div>
     </div>
+
   </header>
   </body>
 </html>
