--- a/dropdown-menu.html
+++ b/dropdown-menu.html
@@ -13,17 +13,65 @@
     <div class="header-left">
         <div class="icon">
         </div>
-        <div class=""><a href="#">Present</a></div>
-        <div><a href="#">Business</a>
-    </div>
+        <div class="drop-container-i">
+          <div class=""><a href="#">Present</a></div>
+          <div class="drop-element-i">
+              <a href="#">Sub Menù1</a>
+              <a href="#">Sub Menù1</a>
+              <a href="#">Sub Menù1</a>
+            </div>
+        </div>
+
+          <div class="drop-container-i">
+            <div class=""><a href="#">Business</a></div>
+            <div class="drop-element-i">
+                <a href="#">Sub Menù1</a>
+                <a href="#">Sub Menù1</a>
+                <a href="#">Sub Menù1</a>
+            </div>
+          </div>
+
     </div>
     <div class="header-right">
        <div><a href="#">Pricing</a></div>
-       <div><a href="#">Accounts</a></div>
-       <div><a href="#">Products</a></div>
-       <div><a href="#">Company</a></div>
-       <div><a href="#">Help</a></div>
-       <div><a href="#">En</a></div>
+       <div class="drop-container-i">
+         <div class=""><a href="#">Accounts</a></div>
+         <div class="drop-element-i">
+             <a href="#">Sub Menù1</a>
+             <a href="#">Sub Menù1</a>
+             <a href="#">Sub Menù1</a>
+           </div>
+         <div class="drop-container-i">
+            <div class=""><a href="#">Products</a></div>
+            <div class="drop-element-i">
+             <a href="#">Sub Menù1</a>
+             <a href="#">Sub Menù1</a>
+             <a href="#">Sub Menù1</a>
+           </div>
+
+       <div class="drop-container-i">
+         <div class=""><a href="#">Company</a></div>
+         <div class="drop-element-i">
+             <a href="#">Sub Menù1</a>
+             <a href="#">Sub Menù1</a>
+             <a href="#">Sub Menù1</a>
+           </div>
+
+       <div class="drop-container-i">
+         <div class=""><a href="#">Help</a></div>
+         <div class="drop-element-i">
+             <a href="#">Sub Menù1</a>
+             <a href="#">Sub Menù1</a>
+             <a href="#">Sub Menù1</a>
+           </div>
+
+       <div class="drop-container-i">
+         <div class=""><a href="#">En</a></div>
+         <div class="drop-element-i">
+             <a href="#">Sub Menù1</a>
+             <a href="#">Sub Menù1</a>
+             <a href="#">Sub Menù1</a>
+           </div>
        <div class="pink"><a href="#">Get The App</a></div>
     </div>
 
