--- a/dropdown-menu.html
+++ b/dropdown-menu.html
@@ -18,68 +18,78 @@
     </div>
     <div class="header-right">
        <div><a href="#">Pricing</a></div>
+<div class="nav-element">
+    <div class=""><a href="#">Accounts</a></div>
+    <div class="drop-container-i">
+        <div class="drop-element-i">
+            <a href="#">Sub Menù1</a>
+        </div>
+        <div class="drop-element-i">
+            <a href="#">Sub Menù1</a>
+        </div>
+        <div class="drop-element-i">
+            <a href="#">Sub Menù1</a>
+        </div>
+   </div>
+</div>
+<div class="nav-element">
+    <div class=""><a href="#">Products</a></div>
+    <div class="drop-container-i">
+        <div class="drop-element-i">
+            <a href="#">Sub Menù1</a>
+        </div>
+        <div class="drop-element-i">
+            <a href="#">Sub Menù1</a>
+        </div>
+        <div class="drop-element-i">
+            <a href="#">Sub Menù1</a>
+        </div>
+   </div>
+</div>
+<div class="nav-element">
+    <div class=""><a href="#">Company</a></div>
+    <div class="drop-container-i">
+        <div class="drop-element-i">
+            <a href="#">Sub Menù1</a>
+        </div>
+        <div class="drop-element-i">
+            <a href="#">Sub Menù1</a>
+        </div>
+        <div class="drop-element-i">
+            <a href="#">Sub Menù1</a>
+        </div>
+   </div>
+</div>
+<div class="nav-element">
+    <div class=""><a href="#">Help</a></div>
+    <div class="drop-container-i">
+        <div class="drop-element-i">
+            <a href="#">Sub Menù1</a>
+        </div>
+        <div class="drop-element-i">
+            <a href="#">Sub Menù1</a>
+        </div>
+        <div class="drop-element-i">
+            <a href="#">Sub Menù1</a>
+        </div>
+   </div>
+</div>
+<div class="nav-element">
+    <div class=""><a href="#">En</a></div>
+    <div class="drop-container-i">
+        <div class="drop-element-i">
+            <a href="#">Sub Menù1</a>
+        </div>
+        <div class="drop-element-i">
+            <a href="#">Sub Menù1</a>
+        </div>
+        <div class="drop-element-i">
+            <a href="#">Sub Menù1</a>
+        </div>
+   </div>
+</div>
 
-       <div class="drop-container-i">
-           <div class=""><a href="#">Accounts</a></div>
-           <div class="drop-element-i">
-               <a href="#">Sub Menù1</a>
-           </div>
-           <div class="drop-element-i">
-               <a href="#">Sub Menù1</a>
-           </div>
-           <div class="drop-element-i">
-               <a href="#">Sub Menù1</a>
-           </div>
-
-      </div>
-         <div class="drop-container-i">
-            <div class=""><a href="#">Products</a></div>
-            <div class="drop-element-i">
-                <a href="#">Sub Menù1</a>
-            </div>
-            <div class="drop-element-i">
-                <a href="#">Sub Menù1</a>
-            </div>
-            <div class="drop-element-i">
-                <a href="#">Sub Menù1</a>
-            </div>
-       </div>
-       <div class="drop-container-i">
-         <div class=""><a href="#">Company</a></div>
-         <div class="drop-element-i">
-             <a href="#">Sub Menù1</a>
-        </div>
-         <div class="drop-element-i">
-             <a href="#">Sub Menù1</a>
-        </div>
-         <div class="drop-element-i">
-             <a href="#">Sub Menù1</a>
-        </div>
-        </div>
-       <div class="drop-container-i">
-         <div class=""><a href="#">Help</a></div>
-         <div class="drop-element-i">
-             <a href="#">Sub Menù1</a>
-        </div>
-         <div class="drop-element-i">
-             <a href="#">Sub Menù1</a>
-        </div>
-         <div class="drop-element-i">
-             <a href="#">Sub Menù1</a>
-        </div>
-       </div>
-       <div class="drop-container-i">
-         <div class=""><a href="#">En</a></div>
-         <div class="drop-element-i">
-             <a href="#">Sub Menù1</a>
-        </div>
-         <div class="drop-element-i">
-             <a href="#">Sub Menù1</a>
-        </div>
-         <div class="drop-element-i">
-             <a href="#">Sub Menù1</a>
-        </div>
-           </div>
+        
        <div class="pink"><a href="#">Get The App</a></div>
     </div>
 
