--- a/dropdown-menu.html
+++ b/dropdown-menu.html
@@ -12,82 +12,93 @@
   <header>
     <div class="header-left">
         <div class="icon">
-        </div>
-        <div class=""><a href="#">Present</a></div>
-        <div class=""><a href="#">Business</a></div>
+    </div>
+    <div class=""><a href="#">Present</a></div>
+    <div class=""><a href="#">Business</a></div>
     </div>
     <div class="header-right">
-       <div><a href="#">Pricing</a></div>
-<div class="nav-element">
-    <div class=""><a href="#">Accounts</a></div>
-    <div class="drop-container-i">
-        <div class="drop-element-i">
-            <a href="#">Sub Menù1</a>
-        </div>
-        <div class="drop-element-i">
-            <a href="#">Sub Menù2</a>
-        </div>
-        <div class="drop-element-i">
-            <a href="#">Sub Menù3</a>
-        </div>
-   </div>
-</div>
-<div class="nav-element">
-    <div class=""><a href="#">Products</a></div>
-    <div class="drop-container-i">
-        <div class="drop-element-i">
-            <a href="#">Sub Menù1</a>
-        </div>
-        <div class="drop-element-i">
-            <a href="#">Sub Menù2</a>
-        </div>
-        <div class="drop-element-i">
-            <a href="#">Sub Menù3</a>
-        </div>
-   </div>
-</div>
-<div class="nav-element">
-    <div class=""><a href="#">Company</a></div>
-    <div class="drop-container-i">
-        <div class="drop-element-i">
-            <a href="#">Sub Menù1</a>
-        </div>
-        <div class="drop-element-i">
-            <a href="#">Sub Menù2</a>
-        </div>
-        <div class="drop-element-i">
-            <a href="#">Sub Menù3</a>
-        </div>
-   </div>
-</div>
-<div class="nav-element">
-    <div class=""><a href="#">Help</a></div>
-    <div class="drop-container-i">
-        <div class="drop-element-i">
-            <a href="#">Sub Menù1</a>
-        </div>
-        <div class="drop-element-i">
-            <a href="#">Sub Menù2</a>
-        </div>
-        <div class="drop-element-i">
-            <a href="#">Sub Menù3</a>
-        </div>
-   </div>
-</div>
-<div class="nav-element">
-    <div class=""><a href="#">En</a></div>
-    <div class="drop-container-i">
-        <div class="drop-element-i">
-            <a href="#">Sub Menù1</a>
-        </div>
-        <div class="drop-element-i">
-            <a href="#">Sub Menù2</a>
-        </div>
-        <div class="drop-element-i">
-            <a href="#">Sub Menù3</a>
-        </div>
-   </div>
-</div>
+        <div><a href="#">Pricing</a></div>
+        <div class="nav-element">
+            <div class=""><a href="#">Accounts</a></div>
+                <div class="drop-container-i">
+                    <div class="drop-element-i">
+                        <a href="#">Standard</a>
+                    </div>
+                    <div class="drop-element-i">
+                        <a href="#">Premium</a>
+                    </div>
+                    <div class="drop-element-i">
+                        <a href="#">Metal</a>
+                    </div>
+               </div>
+          </div>
+          <div class="nav-element">
+              <div class=""><a href="#">Products</a></div>
+                  <div class="drop-container-i">
+                     <div class="drop-element-i">
+                         <a href="#">Money Transfers</a>
+                    </div>
+                    <div class="drop-element-i">
+                        <a href="#">Vaults</a>
+                    </div>
+                    <div class="drop-element-i">
+                        <a href="#">Budgeting</a>
+                    </div>
+                    <div class="drop-element-i">
+                        <a href="#">Perks</a>
+                    </div>
+                    <div class="drop-element-i">
+                        <a href="#">Cryptocurrency</a>
+                    </div>
+                    <div class="drop-element-i">
+                        <a href="#">Mobile Phone Insurance</a>
+                    </div>
+                    <div class="drop-element-i">
+                        <a href="#">Overseas Medical Insurance</a>
+                   </div>
+              </div>
+         </div>
+         <div class="nav-element">
+             <div class=""><a href="#">Company</a></div>
+                <div class="drop-container-i">
+                    <div class="drop-element-i">
+                        <a href="#">About</a>
+                    </div>
+                    <div class="drop-element-i">
+                        <a href="#">Company</a>
+                    </div>
+                    <div class="drop-element-i">
+                        <a href="#">Carrers</a>
+                    </div>
+                    <div class="drop-element-i">
+                        <a href="#">Contact</a>
+                   </div>
+              </div>
+         </div>
+         <div class="nav-element">
+             <div class=""><a href="#">Help</a></div>
+                 <div class="drop-container-i">
+                     <div class="drop-element-i">
+                         <a href="#">Community</a>
+                      </div>
+                      <div class="drop-element-i">
+                          <a href="#">Help Center</a>
+                      </div>
+
+                   </div>
+               </div>
+               <div class="nav-element">
+                   <div class=""><a href="#">En</a></div>
+                        <div class="drop-container-i">
+                            <div class="drop-element-i">
+                                <a href="#">Italiano</a>
+                            </div>
+                            <div class="drop-element-i">
+                                <a href="#">English</a>
+                            </div>
+
+                        </div>
+                   </div>
 
 
        <div class="pink"><a href="#">Get The App</a></div>
