--- a/dropdown-menu.html
+++ b/dropdown-menu.html
@@ -10,99 +10,115 @@
   </head>
   <body>
   <header>
-    <div class="header-left">
-        <div class="icon">
-    </div>
-    <div class=""><a href="#">Present</a></div>
-    <div class=""><a href="#">Business</a></div>
-    </div>
-    <div class="header-right">
-        <div><a href="#">Pricing</a></div>
-        <div class="nav-element">
-            <div class=""><a href="#">Accounts</a></div>
-                <div class="drop-container-i">
-                    <div class="drop-element-i">
-                        <a href="#">Standard</a>
-                    </div>
-                    <div class="drop-element-i">
-                        <a href="#">Premium</a>
-                    </div>
-                    <div class="drop-element-i">
-                        <a href="#">Metal</a>
-                    </div>
-               </div>
-          </div>
-          <div class="nav-element">
-              <div class=""><a href="#">Products</a></div>
-                  <div class="drop-container-i">
-                     <div class="drop-element-i">
-                         <a href="#">Money Transfers</a>
-                    </div>
-                    <div class="drop-element-i">
-                        <a href="#">Vaults</a>
-                    </div>
-                    <div class="drop-element-i">
-                        <a href="#">Budgeting</a>
-                    </div>
-                    <div class="drop-element-i">
-                        <a href="#">Perks</a>
-                    </div>
-                    <div class="drop-element-i">
-                        <a href="#">Cryptocurrency</a>
-                    </div>
-                    <div class="drop-element-i">
-                        <a href="#">Mobile Phone Insurance</a>
-                    </div>
-                    <div class="drop-element-i">
-                        <a href="#">Overseas Medical Insurance</a>
-                   </div>
-              </div>
-         </div>
-         <div class="nav-element">
-             <div class=""><a href="#">Company</a></div>
-                <div class="drop-container-i">
-                    <div class="drop-element-i">
-                        <a href="#">About</a>
-                    </div>
-                    <div class="drop-element-i">
-                        <a href="#">Company</a>
-                    </div>
-                    <div class="drop-element-i">
-                        <a href="#">Carrers</a>
-                    </div>
-                    <div class="drop-element-i">
-                        <a href="#">Contact</a>
-                   </div>
-              </div>
-         </div>
-         <div class="nav-element">
-             <div class=""><a href="#">Help</a></div>
-                 <div class="drop-container-i">
-                     <div class="drop-element-i">
-                         <a href="#">Community</a>
-                      </div>
-                      <div class="drop-element-i">
-                          <a href="#">Help Center</a>
-                      </div>
+      <div class="container">
+          <div class="nav-container">
+              <div class="navbar">
+                <div class="navbar-left">
+                  
+                  <div class="nav-element">
+                      <h2><a href="#">Present</a></h2>
+                  </div>
+                  <div class="nav-element">
+                      <h2><a href="#">Business</a></h2>
+                  </div>
+                </div>
+                <div class="navbar-right">
+                  <div class="nav-element">
+                    <h2><a href="#">Pricing</a></h2>
+                  </div>
+                  <div class="nav-element">
+                    <h2>Products</h2>
+                      <div class="drop-container-i">
+                          <div class="drop-element-i">
+                              <a href="#">Money Transfers</a>
+                          </div>
+                          <div class="drop-element-i">
+                              <a href="#"><i class="fas fa-caret-left"></i>Vaults</a>
+                              <div class="drop-container-ii">
+                                  <div class="drop-element-ii">Sub sub  Menù1</div>
+                                  <div class="drop-element-ii">Sub sub  Menù1</div>
+                              </div>
+                          </div>
+                          <div class="drop-element-i">
+                              <a href="#">Perks</a>
 
-                   </div>
-               </div>
-               <div class="nav-element">
-                   <div class=""><a href="#">En</a></div>
-                        <div class="drop-container-i">
-                            <div class="drop-element-i">
-                                <a href="#">Italiano</a>
-                            </div>
-                            <div class="drop-element-i">
-                                <a href="#">English</a>
-                            </div>
-
+                          </div>
+                          <div class="drop-element-i">
+                              <a href="#">Cryptocurrency</a>
+                          </div>
+                          <div class="drop-element-i">
+                              <a href="#">Mobile Phone Insurance</a>
+                          </div>
+                          <div class="drop-element-i">
+                              <a href="#">Overseas Medical Insurance</a>
+                          </div>
+                      </div>
+                    </div>
+                  <div class="nav-element">
+                    <h2>Company</h2>
+                      <div class="drop-container-i">
+                          <div class="drop-element-i">
+                              <a href="#">About</a>
+                          </div>
+                          <div class="drop-element-i">
+                              <a href="#"><i class="fas fa-caret-left"></i>Company</a>
+                              <div class="drop-container-ii">
+                                  <div class="drop-element-ii">Sub sub  Menù1</div>
+                                  <div class="drop-element-ii">Sub sub  Menù1</div>
+                              </div>
+                          </div>
+                          <div class="drop-element-i">
+                              <a href="#">Carrers</a>
+                          </div>
                         </div>
-                   </div>
+                    </div>
+                  <div class="nav-element">
+                    <h2>Help</h2>
+                      <div class="drop-container-i">
+                          <div class="drop-element-i">
+                              <a href="#">Community</a>
+                          </div>
+                          <div class="drop-element-i">
+                              <a href="#"><i class="fas fa-caret-left"></i>Help Center</a>
+                              <div class="drop-container-ii">
+                                  <div class="drop-element-ii">Sub sub  Menù1</div>
+                                  <div class="drop-element-ii">Sub sub  Menù1</div>
+                              </div>
+                          </div>
+                        </div>
+                    </div>
+                  <div class="nav-element">
+                    <h2>En</h2>
+                      <div class="drop-container-i">
+                          <div class="drop-element-i">
+                              <a href="#">Italiano</a>
+                          </div>
+                          <div class="drop-element-i">
+                              <a href="#"><i class="fas fa-caret-left"></i>English</a>
+                              <div class="drop-container-ii">
+                                  <div class="drop-element-ii">Sub sub  Menù1</div>
+                                  <div class="drop-element-ii">Sub sub  Menù1</div>
+                              </div>
+                          </div>
+                          <div class="drop-element-i">
+                              <a href="#">Sub Menù 1</a>
+
+                          </div>
+                          <div class="drop-element-i">
+                              <a href="#">Sub Menù 1</a>
+                          </div>
+                      </div>
+                    </div>
+                  <div class="nav-element">
+                    <div class="pink"><a href="#"><h2>Get The App</h2></a></div>
+                  </div>
+                </div>
+              </div>
+          </div>
+      </div>
 
 
-       <div class="pink"><a href="#">Get The App</a></div>
-    </div>
+
 
   </header>
   </body>
