--- a/dropdown-menu.html
+++ b/dropdown-menu.html
@@ -14,9 +14,9 @@
           <div class="nav-container">
               <div class="navbar">
                 <div class="navbar-left">
-                  
+
                   <div class="nav-element">
-                      <h2><a href="#">Present</a></h2>
+                    <h2><a href="#">Present</a></h2>
                   </div>
                   <div class="nav-element">
                       <h2><a href="#">Business</a></h2>
@@ -24,7 +24,7 @@
                 </div>
                 <div class="navbar-right">
                   <div class="nav-element">
-                    <h2><a href="#">Pricing</a></h2>
+                   <h2><a href="#">Pricing</a></h2>
                   </div>
                   <div class="nav-element">
                     <h2>Products</h2>
@@ -110,7 +110,7 @@
                       </div>
                     </div>
                   <div class="nav-element">
-                    <div class="pink"><a href="#"><h2>Get The App</h2></a></div>
+                    <div class="pink"><a href="#">Get The App</a></div>
                   </div>
                 </div>
               </div>
