--- a/dropdown-menu.html
+++ b/dropdown-menu.html
@@ -19,7 +19,7 @@
                     <h2><a href="#">Present</a></h2>
                   </div>
                   <div class="nav-element">
-                      <h2><a href="#">Business</a></h2>
+                      <h2 id="grey"><a href="#">Business</a></h2>
                   </div>
                 </div>
                 <div class="navbar-right">
@@ -27,24 +27,23 @@
                    <h2><a href="#">Pricing</a></h2>
                   </div>
                   <div class="nav-element">
-                    <h2>Products</h2>
+                    <h2 id="grey">Products</h2>
                       <div class="drop-container-i">
                           <div class="drop-element-i">
                               <a href="#">Money Transfers</a>
                           </div>
                           <div class="drop-element-i">
-                              <a href="#"><i class="fas fa-caret-left"></i>Vaults</a>
-                              <div class="drop-container-ii">
-                                  <div class="drop-element-ii">Sub sub  Menù1</div>
-                                  <div class="drop-element-ii">Sub sub  Menù1</div>
-                              </div>
+                              <a href="#">Vaults</a>
                           </div>
                           <div class="drop-element-i">
                               <a href="#">Perks</a>
-
                           </div>
                           <div class="drop-element-i">
-                              <a href="#">Cryptocurrency</a>
+                              <a href="#"><i class="fas fa-caret-left"></i>Cryptocurrency</a>
+                              <div id="crypto" class="drop-container-ii">
+                                  <div class="drop-element-ii">Bitcoin</div>
+                                  <div class="drop-element-ii">Ethereum</div>
+                              </div>
                           </div>
                           <div class="drop-element-i">
                               <a href="#">Mobile Phone Insurance</a>
@@ -63,8 +62,8 @@
                           <div class="drop-element-i">
                               <a href="#"><i class="fas fa-caret-left"></i>Company</a>
                               <div class="drop-container-ii">
-                                  <div class="drop-element-ii">Sub sub  Menù1</div>
-                                  <div class="drop-element-ii">Sub sub  Menù1</div>
+                                  <div class="drop-element-ii">History</div>
+                                  <div class="drop-element-ii">Board</div>
                               </div>
                           </div>
                           <div class="drop-element-i">
@@ -79,11 +78,7 @@
                               <a href="#">Community</a>
                           </div>
                           <div class="drop-element-i">
-                              <a href="#"><i class="fas fa-caret-left"></i>Help Center</a>
-                              <div class="drop-container-ii">
-                                  <div class="drop-element-ii">Sub sub  Menù1</div>
-                                  <div class="drop-element-ii">Sub sub  Menù1</div>
-                              </div>
+                              <a href="#">Help Center</a>
                           </div>
                         </div>
                     </div>
@@ -94,11 +89,7 @@
                               <a href="#">Italiano</a>
                           </div>
                           <div class="drop-element-i">
-                              <a href="#"><i class="fas fa-caret-left"></i>English</a>
-                              <div class="drop-container-ii">
-                                  <div class="drop-element-ii">Sub sub  Menù1</div>
-                                  <div class="drop-element-ii">Sub sub  Menù1</div>
-                              </div>
+                              <a href="#">English</a>
                           </div>
                           <div class="drop-element-i">
                               <a href="#">Sub Menù 1</a>
