--- a/dropdown-menu.html
+++ b/dropdown-menu.html
@@ -16,18 +16,18 @@
                 <div class="navbar-left">
 
                   <div class="nav-element">
-                    <h2><a href="#">Present</a></h2>
+                    <h2 ><a href="#">Present</a></h2 >
                   </div>
                   <div class="nav-element">
-                      <h2 id="grey"><a href="#">Business</a></h2>
+                      <h2  id="grey"><a href="#">Business</a></h2 >
                   </div>
                 </div>
                 <div class="navbar-right">
                   <div class="nav-element">
-                   <h2><a href="#">Pricing</a></h2>
+                   <h2 ><a href="#">Pricing</a></h2 >
                   </div>
                   <div class="nav-element">
-                    <h2 id="grey">Products</h2>
+                    <h2  id="grey">Products</h2 >
                       <div class="drop-container-i">
                           <div class="drop-element-i">
                               <a href="#">Money Transfers</a>
@@ -54,7 +54,7 @@
                       </div>
                     </div>
                   <div class="nav-element">
-                    <h2>Company</h2>
+                    <h2 id="grey" >Company</h2 >
                       <div class="drop-container-i">
                           <div class="drop-element-i">
                               <a href="#">About</a>
@@ -72,7 +72,7 @@
                         </div>
                     </div>
                   <div class="nav-element">
-                    <h2>Help</h2>
+                    <h2 id="grey">Help</h2 >
                       <div class="drop-container-i">
                           <div class="drop-element-i">
                               <a href="#">Community</a>
@@ -83,7 +83,7 @@
                         </div>
                     </div>
                   <div class="nav-element">
-                    <h2>En</h2>
+                    <h2 id="grey">En</h2 >
                       <div class="drop-container-i">
                           <div class="drop-element-i">
                               <a href="#">Italiano</a>
@@ -91,13 +91,7 @@
                           <div class="drop-element-i">
                               <a href="#">English</a>
                           </div>
-                          <div class="drop-element-i">
-                              <a href="#">Sub Menù 1</a>
-
-                          </div>
-                          <div class="drop-element-i">
-                              <a href="#">Sub Menù 1</a>
-                          </div>
+                        
                       </div>
                     </div>
                   <div class="nav-element">
