--- a/dropdown-menu.html
+++ b/dropdown-menu.html
@@ -15,6 +15,9 @@
               <div class="navbar">
                 <div class="navbar-left">
 
+                  <div id="logo">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/d/d6/Revolut.svg" alt="">
+                  </div>
                   <div class="nav-element">
                     <h2 ><a href="#">Present</a></h2 >
                   </div>
@@ -91,7 +94,7 @@
                           <div class="drop-element-i">
                               <a href="#">English</a>
                           </div>
-                        
+
                       </div>
                     </div>
                   <div class="nav-element">
